@startuml
skinparam classAttributeIconSize 0


title __Bank Application Class Diagram__\n

abstract class BankAccount {
    - accHolder: Person
    # balance : double
    - accNum : int
    + BankAccount()
    + BankAccount(accHolder: Person,
    accNum: int, balance: double)
    + getInterestRate(InterestRate interestRate): void
    + toString() : String
    {abstract} + describeAccount() : String
 }

 class CurrentAccount {
    - TYPE : String
    + CurrentAccount(accHolder: Person,
    accNum: int, balance: double)
    + describeAccount() : String
 }

 class Person {
    - address : String
    - name : String
    + Person(name: String, address: String)
    + Person()
    + toString() : String
 }

 class SavingsAccount {
    - TYPE : String
    + SavingsAccount(accHolder: Person,
    accNum: int, balance: double)
    + describeAccount(): String
 }

class InterestRate {
   + calculateCurrentAccountInterestRate(double accountBalance): double
   + calculateSavingsAccountInterestRate(double accountBalance): double
}

  BankAccount -right-o Person : has a
  InterestRate -right-o BankAccount : has a
  CurrentAccount -up-|> BankAccount
  SavingsAccount -up-|> BankAccount

@enduml
